--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h1 {
   }  
   /********* Region positioning text align margins and style **********/
   .chicken{
-    background-color:#99005e;         
+    background-color:#993366;         
     color: black;
     }
    .beef{
