--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,11 @@ h1 {
     color: black;
     }
    .beef{
-    background-color:#3333ff;
+    background-color:#DC143C;
     color: white;  
    }
    .sushi{
-    background-color:#993366;
+    background-color:#FAFAD2;
     color: black;   
    }
 /********** Large devices only **********/
